--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <i class="fab fa-twitter social-icon"></i>
         <i class="fab fa-instagram social-icon"></i>
         <i class="fas fa-envelope social-icon"></i>
-        <p>© Copyright E-portfolio</p>
+        <p style="color:black;">© Copyright E-portfolio</p>
     
       </footer>
 
